--- a/index.html
+++ b/index.html
@@ -819,11 +819,10 @@
               <strong>Email:</strong> fourstim@gmail.com<br>
             </p>
             <div class="social-links mt-3">
-              <a href="https://twitter.com/maximdigital" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="https://facebook.com/maximdigital" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="https://instagram.com/maximdigital" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="https://linkedin.com/company/maximdigital" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              <a href="skype:maximdigital?chat" class="google-plus"><i class="bx bxl-skype"></i></a>
+              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
             </div>
           </div>
         </div>
@@ -831,22 +830,22 @@
         <div class="col-lg-4 col-md-6 footer-links">
           <h4>Company Info</h4>
           <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="/home">Home</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="/about">About Us</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="/portfolio">Portfolio</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="/terms">Terms of Service</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="/privacy">Privacy Policy</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#home">Home</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#about">About Us</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">Portfolio</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#team">Team</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy Policy</a></li>
           </ul>
         </div>
 
         <div class="col-lg-4 col-md-6 footer-links">
           <h4>Our Solutions</h4>
           <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="/services/web-design">Custom Web Design</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="/services/development">Full-Stack Development</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="/services/mobile">Mobile App Development</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="/services/marketing">Digital Marketing</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="/services/branding">Brand Identity Design</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Custom Web Design</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Full-Stack Development</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Mobile App Development</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Digital Marketing</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Brand Identity Design</a></li>
           </ul>
         </div>
 
