--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Jangan sepelekan hal yang kecil, karena sesuatu yang besar itu berasal dari hal-hal yang kecil... PAHAM
+                  Kuat bukanlah tentang tidak pernah meneteskan air mata, tapi kuat adalah ketika tetap berdiri kokoh meskipun orang lain menjatuhkan... PAHAM
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/team/revhan.png" class="testimonial-img" alt="">
@@ -244,7 +244,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  jangan lupa sholat jumat
+                  "man shabara Zhafira" siapa yang bersabar dia akan menang
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/team/bambang.png" class="testimonial-img" alt="">
@@ -286,10 +286,10 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-IT">IT -Revhan</li>
-              <li data-filter=".filter-Hotel">HOTEL -Felicia</li>
-              <li data-filter=".filter-Kuliner">KULINER -Rachel</li>
-              <li data-filter=".filter-IT2">IT -Bambang</li>
+              <li data-filter=".filter-IT">Revhan -IT</li>
+              <li data-filter=".filter-Hotel">Felicia -PERHOTELAN</li>
+              <li data-filter=".filter-Kuliner">Rachel -KULINER</li>
+              <li data-filter=".filter-IT2">Bambang -IT</li>
             </ul>
           </div>
         </div>
