--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
       <div class="header">
         <h1 class="contact-title">Contact Us</h1>
         <p class="contact-description">
-          Thank you for visiting our website. Let me know if you have something to say.
+          Thank you for visiting our website. Let me know if you have anything to say, this is a secret message .
         </p>
       </div>
       <div class="form-group">
