--- a/thankyou.html
+++ b/thankyou.html
@@ -18,8 +18,9 @@
         <div class="text-center">
           <h1 class="thank-you-title">Thank you for contacting us</h1>
           <p class="thank-you-message">
-            Please check your email in 24 hours we will send you a reply as soon
-            as possible. Thanks
+            Udah broo..tunggu admin jawabb yaa...
+            <br>
+            @fourteamss
           </p>
           <div class="button-container">
             <a href="/index.html" class="go-back-button">Go Back</a>
