--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-IT">Revhan -IT</li>
               <li data-filter=".filter-Hotel">Felicia -PERHOTELAN</li>
-              <li data-filter=".filter-Kuliner">Rachel -KULINER</li>
+              <li data-filter=".filter-Kuliner">Rachel -TATABOGA</li>
               <li data-filter=".filter-IT2">Bambang -IT</li>
             </ul>
           </div>
