--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="container text-center text-md-left" data-aos="fade-up">
-      <h1>Welcome to Four Studio</h1>
+      <h1>Welcome to Four Team Studio</h1>
       <!-- <h2>We are team of talented designers making websites with Bootstrap</h2> -->
       <img src="assets/img/earth.png" class="hero-img">
       <a href="#about" class="btn-get-started scrollto">Get Started</a>
@@ -812,7 +812,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-6">
           <div class="footer-info">
-            <h3>Fours Studio </h3>
+            <h3>Fours Team Studio </h3>
             <p>
               Central Business<br>
               Cileungsi 16820, Bogor<br><br>
